# SimpleGraphicsEngine

./: .gitignore  CMakeLists.txt
SimpleGraphicsEngine/: CMakeLists.txt  SimpleGraphicsEngine.cpp  SimpleGraphicsEngine.h
SimpleGraphicsEngine/GraphicsAPI/: GraphicsAPI.cpp  GraphicsAPI.h
SimpleGraphicsEngine/GraphicsAPI/SDL2/: SDL2API.cpp  SDL2API.h
SimpleGraphicsEngine/GraphicsLibrary/: Canvas.cpp  Canvas.h  IntPoint2D.h  Math.cpp  Math.h  RGB8BitColor.cpp  RGB8BitColor.h  Scene.h  Viewport.cpp  Viewport.h
SimpleGraphicsEngine/Math/: Math.cpp  Math.h
SimpleGraphicsEngine/Tests/: Tests.cpp  Tests.h
